# f1

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: build.yml
f1/: cli.py
f1/commands/: constructors.py  drivers.py  race.py  season.py
f1/helpers/: date.py  formatting.py  helpers.py
tests/commands/: test_constructors.py  test_drivers.py  test_race.py  test_season.py
tests/helpers/: test_date.py  test_formatting.py  test_helpers.py
