[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "f1"
version = "0.2.0"
description = "A CLI tool for viewing Formula 1 season schedules"
requires-python = ">=3.14"
dependencies = ["click>=8.1", "fastf1>=3.6"]

[project.scripts]
f1 = "f1.cli:cli"

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "ruff>=0.15.5",
  "pre-commit>=4.5.1",
  "pytest-cov>=7.0.0",
]

[tool.uv]
exclude-newer = "1 week"

[tool.setuptools]
packages = ["f1"] # Only include the f1 directory

[tool.coverage.run]
source = ["f1"]

[tool.coverage.report]
show_missing = true

[tool.coverage.html]
directory = "reports/coverage"

[tool.ruff.lint.isort]
force-single-line = true

[tool.ruff.lint.pycodestyle]
max-line-length = 120

[tool.ruff.lint]
select = [
  # pycodestyle
  "E",
  # Pyflakes
  "F",
  # pyupgrade
  "UP",
  # flake8-bugbear
  "B",
  # flake8-simplify
  "SIM",
  # isort
  "I",
]
